Use local variable type inference where applicable - step 3